--- a/energy/templates/energy/register_archive_month.html
+++ b/energy/templates/energy/register_archive_month.html
@@ -1,48 +1,57 @@
-{% extends "layout.html" %}
+{% extends "layout_card.html" %}
 
 {% block main %}
-    <h5>{% block title %}{{ title }}{% endblock %} de {{ month|date:'F' }}</h5>
-    <hr>
+    <div class="card-header">
+        <h5 class="card-title">{% block title %}{{ title }}{% endblock %} de {{ month|date:'F' }}</h5>
+    </div>
+    <div class="card-body">
+        <div class="row">
+            {% for d in date_list %}
+                <a class="btn btn-lg btn-secondary m-3" style="width: 5em"
+                   href="{% url 'energy:register_day' d|date:'Y' d|date:'m' d|date:'d' %}">{{ d|date:'d' }}
+                </a>
+            {% endfor %}
 
-    {% for d in date_list %}
-        <a class="btn btn-lg btn-secondary col-4 col-sm-2 col-xl-1 m-3"
-           href="{% url 'energy:register_day' d|date:'Y' d|date:'m' d|date:'d' %}">{{ d|date:'d' }}
+            {% if previous_month or next_month %}
+                <nav class="mt-4" aria-label="Page navigation example">
+                    <ul class="pagination justify-content-center">
+                        {% if previous_month %}
+                            <li class="page-item">
+                                <a class="page-link"
+                                   href="{% url 'energy:register_month' previous_month|date:'Y' previous_month|date:'m' %}"
+                                   aria-label="Previous"><i class="bi bi-chevron-double-left"></i> {{ previous_month }}
+                                </a>
+                            </li>
+                        {% else %}
+                            <li class="page-item disabled">
+                                <a class="page-link"><i class="bi bi-chevron-double-left"></i></a>
+                            </li>
+                        {% endif %}
+
+                        {% if previous_month and next_month %}
+                            <li class="page-item disabled"><a class="page-link" href="#">--</a></li>
+                        {% endif %}
+
+                        {% if next_month %}
+                            <li class="page-item">
+                                <a class="page-link"
+                                   href="{% url 'energy:register_month' next_month|date:'Y' next_month|date:'m' %}"
+                                   aria-label="Next">{{ next_month }} <i class="bi bi-chevron-double-right"></i>
+                                </a>
+                            </li>
+                        {% else %}
+                            <li class="page-item disabled">
+                                <a class="page-link"><i class="bi bi-chevron-double-right"></i></a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            {% endif %}
+        </div>
+    </div>
+    <div class="card-footer">
+        <a class="btn btn-link" href="{% url 'energy:register_report_day' month|date:'Y' month|date:'m' %}">
+            Registros
         </a>
-    {% endfor %}
-
-    {% if previous_month or next_month %}
-        <nav class="mt-4" aria-label="Page navigation example">
-            <ul class="pagination justify-content-center">
-                {% if previous_month %}
-                    <li class="page-item">
-                        <a class="page-link"
-                           href="{% url 'energy:register_month' previous_month|date:'Y' previous_month|date:'m' %}"
-                           aria-label="Previous"><i class="bi bi-chevron-double-left"></i> {{ previous_month }}
-                        </a>
-                    </li>
-                {% else %}
-                    <li class="page-item disabled">
-                        <a class="page-link"><i class="bi bi-chevron-double-left"></i></a>
-                    </li>
-                {% endif %}
-
-                {% if previous_month and next_month %}
-                    <li class="page-item disabled"><a class="page-link" href="#">--</a></li>
-                {% endif %}
-
-                {% if next_month %}
-                    <li class="page-item">
-                        <a class="page-link"
-                           href="{% url 'energy:register_month' next_month|date:'Y' next_month|date:'m' %}"
-                           aria-label="Next">{{ next_month }} <i class="bi bi-chevron-double-right"></i>
-                        </a>
-                    </li>
-                {% else %}
-                    <li class="page-item disabled">
-                        <a class="page-link"><i class="bi bi-chevron-double-right"></i></a>
-                    </li>
-                {% endif %}
-            </ul>
-        </nav>
-    {% endif %}
+    </div>
 {% endblock %}
