--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
-    <div class="container">
+    <div class="container-lg">
         <a class="navbar-brand" href="{% url 'energy:index' %}">
             <img src="{% static 'energy/img/favicon.png' %}" alt="" width="30" height="28"
                  class="d-inline-block align-text-top">
@@ -39,7 +39,7 @@
                         {% if user.is_staff %}
                             <li><a class="dropdown-item" href="/admin/">Admin</a></li>
                         {% endif %}
-                        <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                        <li><a class="dropdown-item" href="{% url 'logout' %}">Cerrar sesión</a></li>
                     </ul>
                 </li>
             </ul>
