--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -47,7 +47,7 @@
                 {% endif %}
 
                 <button class="w-100 btn btn-lg btn-secondary" type="submit">Iniciar sesión</button>
-                <p class="mt-5 mb-3 text-muted">&copy; 2022</p>
+                <p class="mt-5 text-muted">&copy; 2022</p>
             </form>
         </div>
     </div>
